Save time series strategies: always handle inactivity timeout as a server attribute